INCLUDE proper flair support + for embeddings

--- a/notebooks/Something.ipynb
+++ b/notebooks/Something.ipynb
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c167ab1b-85bf-415c-9c67-702eeb5bd9a6",
+   "id": "ac94bc17-9c96-459e-87dc-d13cfbe30a11",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -241,9 +241,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit ('venv': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pythonjvsc74a57bd069a7e0843bc35a71a97378535d2c070d3d2cfd63b216ff99a2c8e0e8d31df048"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
