FIX working LM code

--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "8e4c4e91-77bc-4aa4-9710-043c2e7e382c",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "b04f5ccf-35bb-490b-9790-4f888e20be2a",
    "metadata": {},
    "outputs": [
@@ -31,7 +31,7 @@
        "'1.9.0+cpu'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "003a15c5-f783-4673-816d-02cee54e121e",
    "metadata": {},
    "outputs": [
@@ -68,31 +68,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "30c993b0-4361-4b19-89db-b5749f7720e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class token(str):\n",
-    "    def __init__(self, inp_: str, *args, **kwargs):\n",
-    "        super().__init__()\n",
-    "        self.o = inp_\n",
-    "        \n",
-    "    def __repr__(self):\n",
-    "        return f\"t'{self.o}'\"\n",
-    "    \n",
-    "class word(token):\n",
-    "    def __repr__(self):\n",
-    "        return f\"w'{self.o}'\"\n",
-    "    \n",
-    "class morph(token):\n",
-    "    def __repr__(self):\n",
-    "        return f\"m'{self.o}'\""
+    "from marynlp.text.data.objects import token, morph, word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "80de72d1-1455-4897-aa8f-58828326c04a",
    "metadata": {},
    "outputs": [
@@ -102,7 +88,7 @@
        "(t'something', w'lo', m'lo')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "2bc5f662-c1b1-4bea-81ae-95a52288ed31",
    "metadata": {},
    "outputs": [],
@@ -170,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "fc21208f-1146-4882-ba5d-11080d8202fb",
    "metadata": {},
    "outputs": [],
@@ -253,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "9c314bea-140d-4b25-a5a2-decad6b23a88",
    "metadata": {},
    "outputs": [],
@@ -292,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "223aea1b-74c9-43a5-bd05-c9190c576c06",
    "metadata": {},
    "outputs": [],
@@ -516,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "16dfb9dc-6557-4868-adbd-75f7617028bb",
    "metadata": {},
    "outputs": [],
@@ -645,7 +631,7 @@
     "        self.ma_ = ma\n",
     "        \n",
     "    def break_word(self, word: word) -> Tuple[morph]:\n",
-    "        return tuple([ morph(su) for su in ma.break_text([word])[word]])\n",
+    "        return tuple([ morph(su) for su in self.ma_.break_text([word])[word]])\n",
     "        \n",
     "morpheme_path = resources_folder.joinpath(\"./build/df_morphs.txt\")\n",
     "ma = MorphologyAnalyzer(morph_path=morpheme_path)\n",
@@ -945,7 +931,7 @@
    "source": [
     "# Sanity fitting\n",
     "# --------------------------\n",
-    "# embeddings = swe.fit(md)\n",
+    "embeddings = swe.fit(md)\n",
     "# embeddings.shape"
    ]
   },
