update the SED and related API information

--- a/notebooks/ForAPI.ipynb
+++ b/notebooks/ForAPI.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "579133ac-2e12-4201-a115-3fc7db44af94",
    "metadata": {},
    "outputs": [],
@@ -13,10 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "5387d344-fbb4-495d-92b9-b33322107d14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'marynlp.text.processors'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_37870/574090888.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmarynlp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocessors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformatters\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlowercase\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mremove_punctuations\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwhite_space_cleaning\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmarynlp\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfuncutils\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'marynlp.text.processors'"
+     ]
+    }
+   ],
    "source": [
     "## Setting up the needed to do anything\n",
     "from pathlib import Path\n",
@@ -321,13 +333,228 @@
    "id": "8e2a9fb5-c93e-48cf-bbaa-7a215de7dc3b",
    "metadata": {},
    "source": [
-    "## Voice"
+    "## LM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f66d7b6c-d6ff-4eb8-8250-f06eaf5f1249",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from typing import Iterable, List\n",
+    "from marynlp import funcutils as f\n",
+    "\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "@f.apply(set)\n",
+    "def get_unique_item_from_item_sequences(word_sequences: Iterable[Iterable[str]]):\n",
+    "    for word_seq in word_sequences:\n",
+    "        for word in word_seq:\n",
+    "            word = word.strip()\n",
+    "            if len(word) != 0:\n",
+    "                yield word\n",
+    "\n",
+    "@f.apply(set)\n",
+    "def get_unique_morphemes(words: Iterable[str], analyzer):\n",
+    "    analyzer_break_word = (f.partial(break_word, analyzer=analyzer))\n",
+    "\n",
+    "    for word in tqdm(words):\n",
+    "        for morph in analyzer_break_word(word):\n",
+    "            yield morph\n",
+    "\n",
+    "\n",
+    "\n",
+    "def read_text_from_files(txt_file_path: str):\n",
+    "    with open(txt_file_path, mode=\"r\") as rb:\n",
+    "        return rb.readlines()\n",
+    "\n",
+    "import re\n",
+    "read_word_sequence_from_file = f.forEach(lambda l: re.split(r\"\\s+\", l.strip()))(read_text_from_files)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b956c6bd-58e5-4ae9-9de8-bd56578a62c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pathlib import Path\n",
+    "\n",
+    "\n",
+    "from marynlp.text.processor import TokenEncoder\n",
+    "from marynlp.text.data import Vocab\n",
+    "\n",
+    "from experimental.sed import MorphologyAnalyzer\n",
+    "from typing import List, Tuple\n",
+    "\n",
+    "\n",
+    "def break_word(word: str, analyzer) -> Tuple[str]:\n",
+    "    return tuple([ su for su in analyzer.break_text([word])[word]])\n",
+    "\n",
+    "@f.apply(set)\n",
+    "def load_tokens(store_path):\n",
+    "    with open(str(store_path), 'r') as file:\n",
+    "        for y in json.load(file):\n",
+    "            for i in y:\n",
+    "                yield i\n",
+    "\n",
+    "analyzer = MorphologyAnalyzer(\"../resources/pretrained/models_sed_morpheme_template.txt\")\n",
+    "unique_morphemes = load_tokens(\"../resources/pretrained/models_small-tkns.txt\")\n",
+    "morpheme_tokenizer = TokenEncoder(Vocab(unique_morphemes))\n",
+    "unique_words = get_unique_item_from_item_sequences(read_word_sequence_from_file(\"../resources/nelson/train.txt\"))\n",
+    "\n",
+    "\n",
+    "encode_word = f.forEach(morpheme_tokenizer.encode)(f.partial(break_word, analyzer=analyzer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "db9e4048-6905-4ba5-aba4-c82a6d3bcc27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from marynlp.text.processor import BaseTokenEncoder \n",
+    "unique_words = get_unique_item_from_item_sequences(read_word_sequence_from_file(\"../resources/nelson/train.txt\"))\n",
+    "\n",
+    "# Adding the unknown marker at the end\n",
+    "# This would compensate for the LabelEncoder\n",
+    "word_tokenizer = BaseTokenEncoder(Vocab(unique_words).get_tokens() + ['<UNK>'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "439544eb-c5a3-4409-8970-e9d0d4c8a6df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from experimental.sed.modules import CompositionalEmbeddings, CompositionalLanguageModel\n",
+    "import torch\n",
+    "\n",
+    "com_emb = CompositionalEmbeddings(\n",
+    "    morpheme_vocab_size=morpheme_tokenizer.size,\n",
+    "    embedding_dim = 512,\n",
+    "    hidden_dim = 512,\n",
+    "    composition_fn = 'rnn',\n",
+    "    use_cuda=False\n",
+    ");\n",
+    "com_emb.update_weight_from_path(\"../resources/pretrained/models_embeddings_small-embeddings.pth\")\n",
+    "\n",
+    "com_lm = CompositionalLanguageModel(com_emb, \n",
+    "                           word_tokenizer.size,\n",
+    "                           rnn_dim = 512,\n",
+    "                            use_cuda=False)\n",
+    "com_lm.update_weight_from_path(\"../resources/pretrained/models_language-model_6.4819_lm.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "bcfa1c03-3d4d-45a0-92af-d0bcbcbfaf6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# o1 = com_emb.compose_embeddings.emb_mod(torch.tensor(1))\n",
+    "# o2 = com_lm.morph_embedder.compose_embeddings.emb_mod(torch.tensor(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "342782e9-40f2-445f-9098-4cdea6a04012",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "\n",
+    "text = \"mamba\"\n",
+    "words = text.split(); words\n",
+    "\n",
+    "def encode_sentence(sentence: str, encode_word_to_morphs):\n",
+    "    words = sentence.split()\n",
+    "    return pad_sequence(list(map(lambda b: torch.tensor(encode_word_to_morphs(b)), words)), batch_first=True)\n",
+    "\n",
+    "def next_token_predict_proba(input_tensor: torch.Tensor, language_model: nn.Module):\n",
+    "    with torch.no_grad():\n",
+    "        language_model.eval()\n",
+    "        output = language_model(vl)\n",
+    "        return F.softmax(output, dim=1)\n",
+    "\n",
+    "# o = F.softmax(output, dim=1)\n",
+    "# word_ix = torch.argmax(o).item()\n",
+    "# word_tokenizer.decode(word_ix),words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "5dc2b151-7c6c-407a-8b90-9bd7a17ba9e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'moja'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_tokenizer.decode(torch.argmax(F.softmax(output, dim=1)).item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "4d8a456d-2d27-4f2e-b35c-67cd8c3d6fad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next_word_in_sentence = f.apply(\n",
+    "                            f.calls(\n",
+    "                                torch.argmax,\n",
+    "                                lambda b: word_tokenizer.decode(b.item())\n",
+    "                            ),\n",
+    "                        )(f.apply(f.partial(next_token_predict_proba, language_model=com_lm))(f.partial(encode_sentence, encode_word_to_morphs=encode_word)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "8dc75c20-046f-412a-83e8-8bc680ea1d38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'moja'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next_word_in_sentence(\"kesho ninaenda\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14e5607a-3cf0-4288-91a3-9a42b7cc9907",
+   "id": "830d330a-2451-4255-ae58-50475c50cbe5",
    "metadata": {},
    "outputs": [],
    "source": []
