--- a/notebooks/ForAPI.ipynb
+++ b/notebooks/ForAPI.ipynb
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "id": "342782e9-40f2-445f-9098-4cdea6a04012",
    "metadata": {},
    "outputs": [],
@@ -486,7 +486,7 @@
     "def next_token_predict_proba(input_tensor: torch.Tensor, language_model: nn.Module):\n",
     "    with torch.no_grad():\n",
     "        language_model.eval()\n",
-    "        output = language_model(vl)\n",
+    "        output = language_model(input_tensor)\n",
     "        return F.softmax(output, dim=1)\n",
     "\n",
     "# o = F.softmax(output, dim=1)\n",
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "id": "4d8a456d-2d27-4f2e-b35c-67cd8c3d6fad",
    "metadata": {},
    "outputs": [],
@@ -511,23 +511,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "id": "8dc75c20-046f-412a-83e8-8bc680ea1d38",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'moja'"
+       "'maadhimisho'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "next_word_in_sentence(\"kesho ninaenda\")"
+    "next_word_in_sentence(\"kesho\")"
    ]
   },
   {
